testsuite/tests/typecheck/should_fail/T25679.stderr
T25679.hs:16:28: error: [GHC-39999]
    • No instance for ‘HasField "bar" Foo String’
        arising from a use of ‘getField’
    • In the second argument of ‘($)’, namely
        ‘getField @"bar" (Foo {foo = "hi"})’
      In the second argument of ‘($)’, namely
        ‘coerce $ getField @"bar" (Foo {foo = "hi"})’
      In the expression:
        putStrLn $ coerce $ getField @"bar" (Foo {foo = "hi"})

